added-the-csv-file-functionality

--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOc865hSQfz+oNDc9C85MVv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import csv\n",
+        "import os"
+      ],
+      "metadata": {
+        "id": "KOvMBS7TVRjg"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "7YvLvwMBPIzB"
       },
@@ -67,54 +78,69 @@
       "metadata": {
         "id": "ZSgwTjFZPO0s"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def verify_list(L1,X):\n",
-        "#A function to verify whether an element X is in the L\n",
-        "    for i in range(len(L1)):\n",
-        "        if X in L1:\n",
-        "            #x3=int(X[-1])+1\n",
-        "            if (int(X[-1])+1)<=10 and int(X[-2])==0:\n",
-        "                x33=\"00\"+str(int(X[-1])+1)\n",
-        "            elif 10<=int(X[9:])<100 and int(X[-3])==0:\n",
-        "                #x3=int(X[9:])+1\n",
-        "                x33=\"0\"+str(int(X[9:])+1)\n",
-        "            elif int(X[8:])>=100 and int(X[8:])<1000:\n",
-        "                #X3=int(X)+1\n",
-        "                x33=str(int(X[8:])+1)\n",
-        "            X=X.replace(X[8:],x33)\n",
-        "            X=X.upper()\n",
-        "    L1.append(X)\n",
-        "    return L1, X"
+        "def verify_list(csv_file, X):\n",
+        "    # A function to verify whether an element X is in the CSV file\n",
+        "    existing_ids = set()\n",
+        "    if os.path.exists(csv_file):\n",
+        "        with open(csv_file, mode='r', newline='') as file:\n",
+        "            reader = csv.reader(file)\n",
+        "            for row in reader:\n",
+        "                existing_ids.add(row[0])  # Assuming ID is in the first column\n",
+        "\n",
+        "    # Check if the ID exists and increment if needed\n",
+        "    while X in existing_ids:\n",
+        "        if (int(X[-1]) + 1) <= 10 and int(X[-2]) == 0:\n",
+        "            x33 = \"00\" + str(int(X[-1]) + 1)\n",
+        "        elif 10 <= int(X[9:]) < 100 and int(X[-3]) == 0:\n",
+        "            x33 = \"0\" + str(int(X[9:]) + 1)\n",
+        "        elif int(X[8:]) >= 100 and int(X[8:]) < 1000:\n",
+        "            x33 = str(int(X[8:]) + 1)\n",
+        "        X = X.replace(X[8:], x33)\n",
+        "        X = X.upper()\n",
+        "\n",
+        "    return existing_ids, X"
       ],
       "metadata": {
         "id": "O0eUBLxUPUJ0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def ID_creation():\n",
-        "    L=[0]\n",
+        "    csv_file = 'registration_ids.csv'  # Path to the CSV file\n",
         "    while True:\n",
-        "        answe=input(\"If you want to generate an ID, enter 'YES' and if you want to quite, enter 'NO': \")\n",
-        "        if answe==\"NO\":\n",
+        "        answe = input(\"If you want to generate an ID, enter 'YES' and if you want to quit, enter 'NO': \")\n",
+        "        if answe == \"NO\":\n",
         "            break\n",
-        "        ID=\"\"\n",
-        "        first_name=input(\"Enter your first name: \")\n",
-        "        last_name=input(\"Enter your last name: \")\n",
-        "        X1=conson(last_name)\n",
-        "        X2=three_letter(first_name)\n",
-        "        ID=ID+X1+\"-\"+X2+\"-\"+\"001\"\n",
-        "        ID=ID.upper()\n",
-        "        Y1=verify_list(L,ID)\n",
-        "        print(Y1[-1])"
+        "        ID = \"\"\n",
+        "        first_name = input(\"Enter your first name: \")\n",
+        "        last_name = input(\"Enter your last name: \")\n",
+        "        X1 = conson(last_name)\n",
+        "        X2 = three_letter(first_name)\n",
+        "        ID = ID + X1 + \"-\" + X2 + \"-\" + \"001\"\n",
+        "        ID = ID.upper()\n",
+        "\n",
+        "        # Verify and generate a unique ID\n",
+        "        existing_ids, unique_ID = verify_list(csv_file, ID)\n",
+        "\n",
+        "        # Write the unique ID and names to the CSV file\n",
+        "        with open(csv_file, mode='a', newline='') as file:\n",
+        "            writer = csv.writer(file)\n",
+        "            writer.writerow([unique_ID, first_name, last_name])  # Write ID, first name, last name\n",
+        "\n",
+        "        print(unique_ID)\n",
+        "\n",
+        "# Run the ID creation function\n",
+        "ID_creation()"
       ],
       "metadata": {
         "id": "F0V-yQYvPa3-"
