--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -34,57 +34,66 @@
       "metadata": {
         "id": "KOvMBS7TVRjg"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "id": "7YvLvwMBPIzB"
       },
       "outputs": [],
       "source": [
         "def conson(X):\n",
-        "    #taking the first three consonants of the last name\n",
-        "    vowels=[\"a\",\"e\",\"i\",\"o\",\"u\", \"A\",\"E\",\"I\",\"O\",\"U\"]\n",
-        "    ID1=\"\"\n",
-        "    x=\"\"\n",
-        "    for i in range(len(X)):\n",
-        "        if X[i] not in vowels:\n",
+        "  \"\"\"\n",
+        "\n",
+        "  \"\"\"\n",
+        "  #taking the first three consonants of the last name\n",
+        "  vowels = [\"a\",\"e\",\"i\",\"o\",\"u\", \"A\",\"E\",\"I\",\"O\",\"U\"]\n",
+        "  ID1=\"\"\n",
+        "  x=\"\"\n",
+        "  for i in range(len(X)):\n",
+        "      if X[i] not in vowels:\n",
         "            x=x+X[i]\n",
-        "    if len(x)<3:\n",
+        "  if len(x)<3:\n",
         "        x1=3-len(x)\n",
         "        x=x+\"X\"*x1\n",
         "        ID1=ID1+x\n",
-        "    else:\n",
+        "  else:\n",
         "        ID1=ID1+x[:3]\n",
-        "    return ID1"
+        "  return ID1"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "def three_letter(Y):\n",
+        "  \"\"\"\n",
+        "\n",
+        "  \"\"\"\n",
         "    #taking the first three letters of the first name\n",
-        "    Y1=\"\"\n",
-        "    if len(Y)<3:\n",
-        "        x2=3-len(Y)\n",
-        "        Y1=Y+\"X\"*x2\n",
-        "    else:\n",
-        "        Y1=Y[:3]\n",
-        "    return Y1"
+        "  Y1=\"\"\n",
+        "  if len(Y)<3:\n",
+        "       x2=3-len(Y)\n",
+        "       Y1=Y+\"X\"*x2\n",
+        "  else:\n",
+        "       Y1=Y[:3]\n",
+        "  return Y1"
       ],
       "metadata": {
         "id": "ZSgwTjFZPO0s"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def verify_list(csv_file, X):\n",
+        "  def verify_list(csv_file, X):\n",
+        "    \"\"\"\n",
+        "\n",
+        "    \"\"\"\n",
         "    # A function to verify whether an element X is in the CSV file\n",
         "    existing_ids = set()\n",
         "    if os.path.exists(csv_file):\n",
@@ -109,13 +118,16 @@
       "metadata": {
         "id": "O0eUBLxUPUJ0"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def ID_creation():\n",
+        "  def ID_creation():\n",
+        "    \"\"\"\n",
+        "\n",
+        "    \"\"\"\n",
         "    csv_file = 'registration_ids.csv'  # Path to the CSV file\n",
         "    while True:\n",
         "        answe = input(\"If you want to generate an ID, enter 'YES' and if you want to quit, enter 'NO': \")\n",
@@ -140,13 +152,25 @@
         "        print(unique_ID)\n",
         "\n",
         "# Run the ID creation function\n",
-        "ID_creation()"
+        "  ID_creation()"
       ],
       "metadata": {
-        "id": "F0V-yQYvPa3-"
+        "id": "F0V-yQYvPa3-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "995d69bf-7fe8-44e5-a6ab-bf2e05037fff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "If you want to generate an ID, enter 'YES' and if you want to quit, enter 'NO': NO\n"
+          ]
+        }
+      ]
     }
   ]
 }
