added a few comments on the csv file

--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "KOvMBS7TVRjg"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "7YvLvwMBPIzB"
       },
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "ZSgwTjFZPO0s"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,11 +96,11 @@
         "    \"\"\"\n",
         "    # A function to verify whether an element X is in the CSV file\n",
         "    existing_ids = set()\n",
-        "    if os.path.exists(csv_file):\n",
-        "        with open(csv_file, mode='r', newline='') as file:\n",
-        "            reader = csv.reader(file)\n",
-        "            for row in reader:\n",
-        "                existing_ids.add(row[0])  # Assuming ID is in the first column\n",
+        "    if os.path.exists(csv_file):        # Checks if the csv file exists otherwise it skips this block\n",
+        "        with open(csv_file, mode='r', newline='') as file:     # Open the CSV file in 'r' mode\n",
+        "            reader = csv.reader(file)               #  Function parses the file into rows based on the delimiter (usually a comma in CSV files)\n",
+        "            for row in reader:                      # Iterates through each row in the Csv file\n",
+        "                existing_ids.add(row[0])  # Adds the first value of the row to our empty set (exixting_ids)\n",
         "\n",
         "    # Check if the ID exists and increment if needed\n",
         "    while X in existing_ids:\n",
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "O0eUBLxUPUJ0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         },
         "outputId": "995d69bf-7fe8-44e5-a6ab-bf2e05037fff"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
