--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -47,7 +47,10 @@
       "source": [
         "def conson(X):\n",
         "  \"\"\"\n",
+        "  This function\n",
+        "  Arguments:\n",
         "\n",
+        "  Return:\n",
         "  \"\"\"\n",
         "  #taking the first three consonants of the last name\n",
         "  vowels = [\"a\",\"e\",\"i\",\"o\",\"u\", \"A\",\"E\",\"I\",\"O\",\"U\"]\n",
@@ -70,6 +73,9 @@
       "source": [
         "def three_letter(Y):\n",
         "  \"\"\"\n",
+        "  This function...\n",
+        "  Arguments:\n",
+        "  Return:\n",
         "\n",
         "  \"\"\"\n",
         "    #taking the first three letters of the first name\n",
@@ -92,6 +98,9 @@
       "source": [
         "  def verify_list(csv_file, X):\n",
         "    \"\"\"\n",
+        "    This function...\n",
+        "    Arguments:\n",
+        "    Return:\n",
         "\n",
         "    \"\"\"\n",
         "    # A function to verify whether an element X is in the CSV file\n",
