--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "KOvMBS7TVRjg"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7YvLvwMBPIzB"
       },
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "ZSgwTjFZPO0s"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -113,9 +113,9 @@
         "\n",
         "    # Check if the ID exists and increment if needed\n",
         "    while X in existing_ids:\n",
-        "        if (int(X[-1]) + 1) <= 10 and int(X[-2]) == 0:\n",
+        "        if (int(X[-1]) + 1) < 10 and int(X[-2]) == 0:\n",
         "            x33 = \"00\" + str(int(X[-1]) + 1)\n",
-        "        elif 10 <= int(X[9:]) < 100 and int(X[-3]) == 0:\n",
+        "        elif 10 <= int(X[9:]) < 99 and int(X[-3]) == 0:\n",
         "            x33 = \"0\" + str(int(X[9:]) + 1)\n",
         "        elif int(X[8:]) >= 100 and int(X[8:]) < 1000:\n",
         "            x33 = str(int(X[8:]) + 1)\n",
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "O0eUBLxUPUJ0"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -168,9 +168,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "995d69bf-7fe8-44e5-a6ab-bf2e05037fff"
+        "outputId": "337781dc-03eb-4324-9c21-fd16186ce503"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "name": "stdout",
