--- a/python_group18_assignment.ipynb
+++ b/python_group18_assignment.ipynb
@@ -87,12 +87,12 @@
       "metadata": {
         "id": "KOvMBS7TVRjg"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7YvLvwMBPIzB"
       },
@@ -100,10 +100,13 @@
       "source": [
         "def conson(X):\n",
         "  \"\"\"\n",
-        "  This function\n",
-        "  Arguments:\n",
+        "  This function takes a String (X) representing the last name, and returns first 3 consonants.\n",
         "\n",
-        "  Return:\n",
+        "  Arguments: (X) - last name of the student\n",
+        "  Creates temporary variable x to store the consonants\n",
+        "  If the length of x is less than 3, it pads the string with 'X' characters to make it 3 characters long.\n",
+        "\n",
+        "  Return: ID1- the first 3 consonants of the last name\n",
         "  \"\"\"\n",
         "  #taking the first three consonants of the last name\n",
         "  vowels = [\"a\",\"e\",\"i\",\"o\",\"u\", \"A\",\"E\",\"I\",\"O\",\"U\"]\n",
@@ -126,9 +129,13 @@
       "source": [
         "def three_letter(Y):\n",
         "  \"\"\"\n",
-        "  This function...\n",
-        "  Arguments:\n",
-        "  Return:\n",
+        "  This function extracts the first 3 letters of the first name\n",
+        "\n",
+        "  Arguments: Y representing the last name\n",
+        "  Creates temporary variable Y1 to store the first 3 letters of the first name\n",
+        "  if Y is less than 3 charachetrs it pads the string with 'X' characters to make it 3 characters long.\n",
+        "\n",
+        "  Return: Y1, first 3 characters of the name (if less than 3 padded with X)\n",
         "\n",
         "  \"\"\"\n",
         "    #taking the first three letters of the first name\n",
@@ -143,7 +150,7 @@
       "metadata": {
         "id": "ZSgwTjFZPO0s"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -151,9 +158,12 @@
       "source": [
         "  def verify_list(csv_file, X):\n",
         "    \"\"\"\n",
-        "    This function...\n",
-        "    Arguments:\n",
-        "    Return:\n",
+        "    This function fetches IDs from a CSV file and stores them in a set.\n",
+        "    It then checks if the input ID X, exists, if it exists the function it increments by 1\n",
+        "\n",
+        "    Arguments: csv_file, an ID string X as input\n",
+        "\n",
+        "    Return: existing IDs_set, updated X string\n",
         "\n",
         "    \"\"\"\n",
         "    # A function to verify whether an element X is in the CSV file\n",
@@ -168,10 +178,10 @@
         "    while X in existing_ids:\n",
         "        if (int(X[-1]) + 1) < 10 and int(X[-2]) == 0:\n",
         "            x33 = \"00\" + str(int(X[-1]) + 1)\n",
-        "        elif 10 <= int(X[9:]) < 99 and int(X[-3]) == 0:\n",
-        "            x33 = \"0\" + str(int(X[9:]) + 1)\n",
-        "        elif int(X[8:]) >= 100 and int(X[8:]) < 1000:\n",
-        "            x33 = str(int(X[8:]) + 1)\n",
+        "        elif 10 <= (int(X[-2:])+1) <= 99 and int(X[-3]) == 0:\n",
+        "            x33 = \"0\" + str(int(X[-2:]) + 1)\n",
+        "        elif int(X[-3:]) >= 100 and int(X[8:]) < 1000:\n",
+        "            x33 = str(int(X[-3:]) + 1)\n",
         "        X = X.replace(X[8:], x33)\n",
         "        X = X.upper()\n",
         "\n",
@@ -180,7 +190,7 @@
       "metadata": {
         "id": "O0eUBLxUPUJ0"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -188,7 +198,12 @@
       "source": [
         "  def ID_creation():\n",
         "    \"\"\"\n",
+        "  This is the main function that executes the ID generation process.\n",
         "\n",
+        "  It prompts the user to enter their first and last names, calls the other\n",
+        "  three functions to ensure that the generated ID is unique\n",
+        "\n",
+        "  If the ID is unique it writes the ID, first name and last name to the csv file.\n",
         "    \"\"\"\n",
         "    csv_file = 'registration_ids.csv'  # Path to the CSV file\n",
         "    while True:\n",
@@ -217,22 +232,10 @@
         "  ID_creation()"
       ],
       "metadata": {
-        "id": "F0V-yQYvPa3-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "337781dc-03eb-4324-9c21-fd16186ce503"
+        "id": "F0V-yQYvPa3-"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "If you want to generate an ID, enter 'YES' and if you want to quit, enter 'NO': NO\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
